[CRASH] Modifying Normals with Skin Modifier #66030

Closed
opened 2019-06-23 01:07:32 +02:00 by Telmo Silva · 8 comments

System Information
Operating system: Linux-5.1.11-300.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits
Graphics card: Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.0.6

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-21 21:37, hash: 953419c641
Worked: (optional)

Short description of error
Some Normal Options on Vertices, using a Skin Modifier, crash Blender.

Exact steps for others to reproduce the error

  1. Merge Vertices at center from Default Cube
  2. Add Skin Modifier
  3. Select Vertice
  4. [ALT+N] Normal Context Menu
  5. Options Crashing
    • Rotate
    • Point to Target
    • Merge
    • Copy Vectors
    • Paste Vectors
    • Smoothen Vectors
    • Reset Vectors
**System Information** Operating system: Linux-5.1.11-300.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits Graphics card: Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.0.6 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-21 21:37, hash: `953419c641` Worked: (optional) **Short description of error** Some Normal Options on Vertices, using a Skin Modifier, crash Blender. **Exact steps for others to reproduce the error** 1. Merge Vertices at center from Default Cube 2. Add Skin Modifier 3. Select Vertice 4. [ALT+N] Normal Context Menu 5. Options Crashing - Rotate - Point to Target - Merge - Copy Vectors - Paste Vectors - Smoothen Vectors - Reset Vectors
Author

Added subscriber: @nottelmo-4

Added subscriber: @nottelmo-4

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

I can confirm. Here's a test file: skin_modifier_crash.blend

I can confirm. Here's a test file: [skin_modifier_crash.blend](https://archive.blender.org/developer/F7544254/skin_modifier_crash.blend)

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Bastien Montagne was assigned by Sebastian Parborg 2019-06-24 12:07:01 +02:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
MEM_lockfree_allocN_len (vmemh=0x616d7869702f6572) at /home/zed/prog/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:113
113	    return MEMHEAD_FROM_PTR(vmemh)->len & ~((size_t)(MEMHEAD_MMAP_FLAG | MEMHEAD_ALIGN_FLAG));
(gdb) bt
- 0  MEM_lockfree_allocN_len (vmemh=0x616d7869702f6572) at /home/zed/prog/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:113
- 1  0x0000555557fb827b in MEM_lockfree_freeN (vmemh=0x616d7869702f6572) at /home/zed/prog/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:123
#2  0x00005555584c6fbe in BM_loop_normal_editdata_array_free (lnors_ed_arr=0x7fffcdfa0de8)
    at /home/zed/prog/blender/source/blender/bmesh/intern/bmesh_mesh.c:1624
#3  0x0000555558c46d6e in freeCustomNormalArray (t=0x7fffcfe65e08, tc=0x7fffe6644308, custom_data=0x7fffe6644448)
    at /home/zed/prog/blender/source/blender/editors/transform/transform.c:4810
#4  0x0000555558c9b950 in freeTransCustomData (t=0x7fffcfe65e08, tc=0x7fffe6644308, custom_data=0x7fffe6644448)
    at /home/zed/prog/blender/source/blender/editors/transform/transform_generics.c:1811
#5  0x0000555558c9ba44 in freeTransCustomDataContainer (t=0x7fffcfe65e08, tc=0x7fffe6644308, tcdc=0x7fffe6644448)
    at /home/zed/prog/blender/source/blender/editors/transform/transform_generics.c:1829
- 6  0x0000555558c9bc52 in postTrans (C=0x7fffeb891208, t=0x7fffcfe65e08) at /home/zed/prog/blender/source/blender/editors/transform/transform_generics.c:1867
- 7  0x0000555558c4093b in transformEnd (C=0x7fffeb891208, t=0x7fffcfe65e08) at /home/zed/prog/blender/source/blender/editors/transform/transform.c:2814
#8  0x0000555558cac8a3 in transform_modal (C=0x7fffeb891208, op=0x7fffcdd46108, event=0x7fffd0d71d88)
    at /home/zed/prog/blender/source/blender/editors/transform/transform_ops.c:429
#9  0x0000555558228696 in wm_handler_operator_call (C=0x7fffeb891208, handlers=0x7fffcfc8ff98, handler_base=0x7fffd32196a8, event=0x7fffd0d71d88,
    properties=0x0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2188
#10 0x000055555822a74e in wm_handlers_do_intern (C=0x7fffeb891208, event=0x7fffd0d71d88, handlers=0x7fffcfc8ff98)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2899
#11 0x000055555822a8e0 in wm_handlers_do (C=0x7fffeb891208, event=0x7fffd0d71d88, handlers=0x7fffcfc8ff98)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2947
- 12 0x000055555822ba80 in wm_event_do_handlers (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3309
- 13 0x000055555821eef4 in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:417
#14 0x0000555557b79989 in main (argc=1, argv=0x7fffffffdff8) at /home/zed/prog/blender/source/creator/creator.c:500
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. MEM_lockfree_allocN_len (vmemh=0x616d7869702f6572) at /home/zed/prog/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:113 113 return MEMHEAD_FROM_PTR(vmemh)->len & ~((size_t)(MEMHEAD_MMAP_FLAG | MEMHEAD_ALIGN_FLAG)); (gdb) bt - 0 MEM_lockfree_allocN_len (vmemh=0x616d7869702f6572) at /home/zed/prog/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:113 - 1 0x0000555557fb827b in MEM_lockfree_freeN (vmemh=0x616d7869702f6572) at /home/zed/prog/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:123 #2 0x00005555584c6fbe in BM_loop_normal_editdata_array_free (lnors_ed_arr=0x7fffcdfa0de8) at /home/zed/prog/blender/source/blender/bmesh/intern/bmesh_mesh.c:1624 #3 0x0000555558c46d6e in freeCustomNormalArray (t=0x7fffcfe65e08, tc=0x7fffe6644308, custom_data=0x7fffe6644448) at /home/zed/prog/blender/source/blender/editors/transform/transform.c:4810 #4 0x0000555558c9b950 in freeTransCustomData (t=0x7fffcfe65e08, tc=0x7fffe6644308, custom_data=0x7fffe6644448) at /home/zed/prog/blender/source/blender/editors/transform/transform_generics.c:1811 #5 0x0000555558c9ba44 in freeTransCustomDataContainer (t=0x7fffcfe65e08, tc=0x7fffe6644308, tcdc=0x7fffe6644448) at /home/zed/prog/blender/source/blender/editors/transform/transform_generics.c:1829 - 6 0x0000555558c9bc52 in postTrans (C=0x7fffeb891208, t=0x7fffcfe65e08) at /home/zed/prog/blender/source/blender/editors/transform/transform_generics.c:1867 - 7 0x0000555558c4093b in transformEnd (C=0x7fffeb891208, t=0x7fffcfe65e08) at /home/zed/prog/blender/source/blender/editors/transform/transform.c:2814 #8 0x0000555558cac8a3 in transform_modal (C=0x7fffeb891208, op=0x7fffcdd46108, event=0x7fffd0d71d88) at /home/zed/prog/blender/source/blender/editors/transform/transform_ops.c:429 #9 0x0000555558228696 in wm_handler_operator_call (C=0x7fffeb891208, handlers=0x7fffcfc8ff98, handler_base=0x7fffd32196a8, event=0x7fffd0d71d88, properties=0x0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2188 #10 0x000055555822a74e in wm_handlers_do_intern (C=0x7fffeb891208, event=0x7fffd0d71d88, handlers=0x7fffcfc8ff98) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2899 #11 0x000055555822a8e0 in wm_handlers_do (C=0x7fffeb891208, event=0x7fffd0d71d88, handlers=0x7fffcfc8ff98) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2947 - 12 0x000055555822ba80 in wm_event_do_handlers (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3309 - 13 0x000055555821eef4 in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:417 #14 0x0000555557b79989 in main (argc=1, argv=0x7fffffffdff8) at /home/zed/prog/blender/source/creator/creator.c:500 ```

This has nothing to do with the modifier, issue is editing normals of a no-face mesh (which is a non-sense to start with, btw…). Will check.

This has nothing to do with the modifier, issue is editing normals of a no-face mesh (which is a non-sense to start with, btw…). Will check.

This issue was referenced by 187c696cae

This issue was referenced by 187c696caee13aaa27ecd03a9c17a0d2af28a938

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66030
No description provided.